add better test data

--- a/reos/blue/gallery/gallery1.mdx
+++ b/reos/blue/gallery/gallery1.mdx
@@ -1,5 +1,5 @@
 ---
-Name: Title
+Title: Title
 CP Total: 4
 Link: https://www.deviantart.com/stokori/art/WoR-Romeo-Headshot-1084521444
 Category: CP
