implement gallery and dA embeds

--- a/reos/zemira/page.mdx
+++ b/reos/zemira/page.mdx
@@ -1,6 +1,7 @@
 ---
 Name: Zemira
 Link: https://www.deviantart.com/reos-empire/art/Zemira-12611-857965236
+Proof: 
 Category: Tyrian
 ---
 this is that cool tyrian I got 4 free
