fix: allow empty galleries and make it less ugly

--- a/reos/faulkner/page.mdx
+++ b/reos/faulkner/page.mdx
@@ -4,4 +4,4 @@ Link: https://www.deviantart.com/stash/0dnam5nmkpy
 Proof: https://www.deviantart.com/comments/1/1011975347/5152904012
 Category: Vayron
 ---
-this will be that one reo after i can submit its design
+Insecure, despite being perfectly capable. Frequently leans on his companions for support.
