--- a/reos/shade/gallery/puritytrials.mdx
+++ b/reos/shade/gallery/puritytrials.mdx
@@ -1,6 +1,15 @@
 ---
 Title: 2570/4806 || Purity Trials
 Link: https://www.deviantart.com/axlvohx/art/2570-4806-Purity-Trials-725276413
-CP Total: 0
+CP: 36
 Category: Purity Trials
 ---
+
+Fullbody + 2 <br />
+Colored + 3 <br />
+Shaded + 2 <br />
+Finished background + 2 <br />
+Land Bonus + 1 <br />
+Added Reos + 2 <br />
+
+Total = 12 x 3 = 36
