fix: some temp files so vercel stops having a crisis

--- a/reos/hanami/gallery/puritytrials.mdx
+++ b/reos/hanami/gallery/puritytrials.mdx
@@ -1,7 +1,12 @@
 ---
 Title: WoR - Seredipity Trials
 Link: https://www.deviantart.com/skulldog/art/WoR-Seredipity-Trials-809099785
-CP Total: 0
+CP: 31
 Category: Purity Trials
 ---
-number of CP here
+Fullbody + 2<br/>
+Colored + 3<br/>
+Shaded + 2<br/>
+Finished background + 2<br/>
+Added Reos + 2 (for two)<br/>
+Total = 11 x 2 + 9 = 31
