chore: update reo info

--- a/reos/caspian/gallery/cp1.mdx
+++ b/reos/caspian/gallery/cp1.mdx
@@ -1,6 +1,6 @@
 ---
-Title: Zenith Headshots
-Link: https://www.deviantart.com/stokori/art/WoR-Zenith-Headshots-1087466715
+Title: Caspian Headshots
+Link: https://www.deviantart.com/stokori/art/WoR-Caspian-Headshots-1087466715
 CP: 42
 Category: Misc
 ---
