chore: forgot to update a name

--- a/reos/caspian/page.mdx
+++ b/reos/caspian/page.mdx
@@ -1,5 +1,5 @@
 ---
-Name: Zenith
+Name: Caspian
 Link: https://www.deviantart.com/reos-empire/art/Zenith-15961-958648359
 Proof: 
 Category: Vayron
