chore: add actual art for faulkner

--- a/reos/faulkner/gallery/cp1.mdx
+++ b/reos/faulkner/gallery/cp1.mdx
@@ -1,12 +1,10 @@
 ---
-Title: Zenith Headshots
-Link: https://www.deviantart.com/stokori/art/WoR-Zenith-Headshots-1087466715
-CP: 42
+Title: Faulkner Bust
+Link: https://www.deviantart.com/stokori/art/WoR-Faulkner-Bust-1094531396
+CP: 4
 Category: Misc
 ---
-Headshot + 1 <br />
-Colored + 2<br />
-Shaded + 1<br />
-Personal work + 3
-
-Total = 7 x 6 = 42
+Headshot + 1<br/ >
+Colored + 2<br/ >
+Shaded + 1<br/ >
+Total = 4
