--- a/reos/faulkner/gallery/cp1.mdx
+++ b/reos/faulkner/gallery/cp1.mdx
@@ -4,7 +4,8 @@ Link: https://www.deviantart.com/stokori/art/WoR-Faulkner-Bust-1094531396
 CP: 4
 Category: Misc
 ---
-Headshot + 1<br/ >
-Colored + 2<br/ >
-Shaded + 1<br/ >
+Headshot + 1<br/>
+Colored + 2<br/>
+Shaded + 1<br/>
+Personal work + 3<br/>
 Total = 4
