--- a/reos/hanami/page.mdx
+++ b/reos/hanami/page.mdx
@@ -4,4 +4,4 @@ Link: https://www.deviantart.com/reos-empire/art/Sakura-8993-803638596
 Proof: https://www.deviantart.com/comments/1/1011975347/5152904012
 Category: Vayron
 ---
-formerly sakura
+Gentle and softspoken, she cares deeply for those close to her. However, her tendency to remain quiet is her weakness -- nobody ever really knows what she's thinking.
