--- a/reos/snorri/page.mdx
+++ b/reos/snorri/page.mdx
@@ -4,6 +4,4 @@ Link: https://www.deviantart.com/reos-empire/art/Shade-2570-678620812
 Proof: 
 Category: Vayron
 ---
-black vay
-
-wooo yeah wooo
+A seeker of adventure, she loves to go on wild escapades and come back to share exciting and outlandish stories.
