--- a/reos/caspian/page.mdx
+++ b/reos/caspian/page.mdx
@@ -4,4 +4,4 @@ Link: https://www.deviantart.com/reos-empire/art/Zenith-15961-958648359
 Proof: 
 Category: Vayron
 ---
-A loyal sailor from Warrenfall.
+A sailor from Warrenfall. Friends with a sea (water & wind) elemental named Halcyone.
