chore: add training for faulkner

--- a/reos/faulkner/gallery/training1.mdx
+++ b/reos/faulkner/gallery/training1.mdx
@@ -1,7 +1,7 @@
 ---
 Title: Training Stage 1
 Link: https://www.deviantart.com/stokori/art/WoR-Training-Stage-1-Faulkner-1096505018
-CP: 57
+CP: 67
 Category: Training
 ---
 
@@ -15,9 +15,13 @@ Personal work + 3<br />
 Total = 13<br />
 
 Panel 2:<br />
+Fullbody + 2<br />
+Colored + 3<br />
+Shaded + 2<br />
+Personal work + 3<br />
+Total = 10<br />
 
-
-Panel 3:<br />
+Panel 4:<br />
 Headshot + 1<br />
 Colored + 2<br />
 Shaded + 1<br />
@@ -51,4 +55,4 @@ Total = 7 * 2 = 14
 
 Training + 2
 
-Grand Total: 57
+Grand Total: 67
